# testing-serverless-architectures

./: .gitignore  README.md  go.work
testing-apigw/: README.md  package-lock.json  package.json  serverless.yml
testing-apigw/__tests__/test_cases/e2e/: add-restaurant-test.js  list-restaurants-test.js
testing-apigw/__tests__/test_cases/int/: add-restaurant-test.js  list-restaurants-test.js  search-restaurants-test.js
testing-apigw/functions/: add-restaurant.js
testing-appsync/: README.md
testing-event-driven/: README.md
testing-event-driven/event-catcher/: package-lock.json  package.json  schema.graphql  serverless.yml
testing-event-driven/event-catcher/functions/: publish.js
testing-event-driven/event-catcher/mapping-templates/: Mutation.publish.request.vtl  Query.listEvents.request.vtl
testing-event-driven/event-driven-flow/: Cargo.toml  Makefile  package-lock.json  package.json  serverless.yml
testing-event-driven/event-driven-flow/src/: api.rs  dynamodb.rs  eventbridge.rs  sns.rs
testing-in-prod/: README.md
testing-sfn/: README.md
testing-sfn/complex-machine/: Makefile  README.md  go.mod  go.sum  state-machine-definition.asl.json  template.yaml
testing-sfn/complex-machine/e2e/: main_test.go
testing-sfn/sample-machine/: Cargo.toml  Makefile  package-lock.json  package.json  serverless.yml
testing-sfn/sample-machine/src/: main.rs  sfn-local-mock.json
