[package]
name = "testing-event-driven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
aws-config = "0.52.0"
aws-sdk-dynamodb = "0.22.0"
aws-sdk-eventbridge = "0.22.0"
aws-sdk-sns = "0.22.0"
aws-smithy-http = "0.52.0"
aws_lambda_events = "0.7.2"
dotenv = "0.15.0"
lambda_runtime = "0.7.2"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }

[[bin]]
name = "api"
path = "./src/api.rs"

[[bin]]
name = "eventbridge"
path = "./src/eventbridge.rs"

[[bin]]
name = "dynamodb"
path = "./src/dynamodb.rs"

[[bin]]
name = "sns"
path = "./src/sns.rs"
