[package]
name = "sample-machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.7.2"
lambda_runtime = "0.7.2"
reqwest = "0.11.13"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
openssl-sys = { version = "0.9.80", features = ["vendored"] }

[[bin]]
name = "html-getter"
path = "./src/main.rs"
